@@ -2,6 +2,7 @@
 - Fix bug related to instrument changes
 - Improve end of file detection
 - Support for editing lyrics
+- Correctly handle lyrics events when adding or deleting measures
 
 1.4.7
 - Fix for .MID and .MIDI files (upper-case extension)
